# counselai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/versions/: 756eab0f0b96_initial_tables.py  a1b2c3d4e5f6_add_users_and_archive.py  b2c3d4e5f6a7_add_user_management_fields.py  c3d4e5f6a7b8_add_lockout_fields.py
backend/app/: config.py  database.py  dependencies.py  main.py  middleware.py
backend/app/models/: __init__.py  case.py  conversation.py  document.py  message.py  user.py
backend/app/routers/: admin.py  auth.py  cases.py  chat.py  documents.py
backend/app/schemas/: auth.py  case.py  chat.py  document.py
backend/app/services/: auth.py  chunking.py  embedding.py  export.py  ingestion.py  rag.py  security_logger.py  vector_store.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AdminUsersPage.tsx  CaseDetail.tsx  CaseList.tsx  ChangePasswordPage.tsx  ChatMessage.tsx  ChatWindow.tsx  DocumentList.tsx  DocumentUpload.tsx  Layout.tsx  LoginPage.tsx  Toast.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: index.ts
